# OpenglPhysics

./: CMakeLists.txt
include/: character_controller.h  component.h  display.h  scene.h  utils.h  vector3.h  vertex.h
include/physics/: aabb.h  box_component.h  collider_system.h  mover_component.h
include/rendererGL/: camera.h  cube.h  game_object.h  mesh.h  plane.h  shader.h  shape.h  sphere.h  time.h  transform.h
include/scenes/: bullet_physics_demo_scene.h  collider_test1_scene.h  sphere_scene.h
shaders/: cube.vert  sphere.vert
src/: character_controller.cpp  component.cpp  display.cpp  main.cpp  scene.cpp  shape.cpp  utils.cpp  vector3.cpp  vertex.cpp
src/physics/: aabb.cpp  box_component.cpp  collider_system.cpp  mover_component.cpp
src/rendererGL/: camera.cpp  cube.cpp  game_object.cpp  mesh.cpp  plane.cpp  shader.cpp  shape.cpp  sphere.cpp  time.cpp  transform.cpp
src/scenes/: bullet_physics_demo_scene.cpp  collider_test1_scene.cpp  sphere_scene.cpp
